# tourwings-backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  deps.py  main.py  models.py  schemas.py
app/core/: config.py  security.py
app/dev/: create_admin.py
app/routers/: auth.py  booking.py  tours.py  users.py
migrations/: env.py
migrations/versions/: fc9516145e87_add_booking_table.py
